--- a/website/package.json
+++ b/website/package.json
@@ -61,8 +61,10 @@
     "less": "^1.5.0",
     "markdown-it": "^4.4.0",
     "moment": "^2.17.1",
+    "nuka-carousel": "^2.0.4",
     "qs": "2.4.1",
-    "react": "^0.13.1",
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
     "react-autosuggest": "git+https://github.com/moroshko/react-autosuggest.git#785ee38a752a929cceacec0e9207175592446a1a",
     "react-bootstrap": "^0.20.0",
     "react-data-components-bd2k": "^0.5.3",
